app/assets/stylesheets/games.scss
// Place all the styles related to the Games controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

body {
  /* Thanks to UIGradients.com for this one */
  background: linear-gradient(90deg, #abbaab 10%, #ffffff 90%);
}

div.game-letter {
  display: inline-block;
  border: 1px solid black;
  padding-left: 5px;
  padding-right: 5px;
  margin-left: 5px;
  margin-right: 5px;
  width: 70px;

  span.game-letter {
    font-size: 50px;
    text-transform: uppercase;
  }

  span.game-letter.game-letter-active {
    color: red
  }
}

div.game-letter.game-letter-active {
  background: linear-gradient(90deg, #6441A5 10%, #2a0845 90%);
}

.rules-text-area {
  text-align: center;
  min-height: 20px;
}

.rules-text {
  transition: all 0.5s ease;
}

.rules-text.hidden-rules-text {
  opacity: 0;
}


.vertical-margin-row {
  margin-top: 30vh;
}

.letters-row {
  text-align: center
}

.buttons-row {
  text-align: center;
  padding-top: 10px;
}

